--- a/Visualização_de_dados_com_python_extra.ipynb
+++ b/Visualização_de_dados_com_python_extra.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1Gw9K7sRfn56pdBt5O3ncp07F6a5iBZCU",
-      "authorship_tag": "ABX9TyN00urBcJloRdPk4laCeAPe",
+      "authorship_tag": "ABX9TyMLBmna2ambY1+nZwKNT4q5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
         "id": "YqGUFYOKpz0e"
       },
       "source": [
-        "#Posso fazer esse mesmo gráfico considerando os estados e não os municípios \n",
+        "#Posso fazer o mesmo gráfico da outra visualização considerando os estados e não os municípios \n",
         "#(dessa forma, podemos, talvez, conseguir fazer a animação)\n",
         "\n",
         "covid.dropna(subset=['estado'], inplace=True)"
