--- a/Visualização_de_dados_com_python_extra.ipynb
+++ b/Visualização_de_dados_com_python_extra.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1Gw9K7sRfn56pdBt5O3ncp07F6a5iBZCU",
-      "authorship_tag": "ABX9TyMLBmna2ambY1+nZwKNT4q5",
+      "authorship_tag": "ABX9TyPA4kmnEtTuaXTaVFWjMmqE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -965,7 +965,7 @@
       },
       "source": [
         "#Não vamos conseguir fazer a animação, devido ao poder de processamento do google colab\n",
-        "#Portanto, pegando os acumulados para a última data do conjunto de dados\n",
+        "#De qualquer forma, pegando os acumulados para a última data do conjunto de dados:\n",
         "\n",
         "import plotly.express as px\n",
         "\n",
